Hide month and day on mobile

--- a/styles/movieList.scss
+++ b/styles/movieList.scss
@@ -15,5 +15,16 @@ body {
         img {
             max-width: 100vw;
         }
+
+        .movieReleaseDate {
+
+            .movieReleaseYear{}
+            .movieReleaseMonth{
+                display: none;
+            }
+            .movieReleaseDay{
+                display: none;
+            }
+        }
     }
 }
