Show only short lang name on mobile

--- a/styles/movieList.scss
+++ b/styles/movieList.scss
@@ -26,5 +26,17 @@ body {
                 display: none;
             }
         }
+
+        .movieLanguages {
+            .movieLanguage{
+                .engLangName{
+                    display: none;
+                }
+                .isoLangName{}
+                .localLangName{
+                    display: none;
+                }
+            }
+        }
     }
 }
